--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "nodemon ./server/index.js",
+    "seed": "node ./server/seed.js",
+    "start": "node ./server/index.js",
+    "build": "prisma generate"
   },
   "keywords": [],
   "author": "",
