--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon ./server/index.js",
+    "server": "nodemon ./server/server.js",
     "seed": "node ./server/seed.js",
-    "start": "node ./server/index.js",
+    "start": "node ./server/server.js",
     "build": "prisma generate"
   },
   "keywords": [],
