--- a/package.json
+++ b/package.json
@@ -7,17 +7,21 @@
     "server": "nodemon ./server/server.js",
     "seed": "node ./server/seed.js",
     "start": "node ./server/server.js",
-    "build": "prisma generate"
+    "build": "prisma generate",
+    "test" : "jest --runInBand"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
-    "prisma": "^6.16.1"
+    "jest": "^30.1.3",
+    "prisma": "^6.16.2",
+    "puppeteer": "^24.22.0",
+    "supertest": "^7.1.4"
   },
   "dependencies": {
-    "@prisma/client": "^6.16.1",
+    "@prisma/client": "^6.16.2",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
