--- a/package.json
+++ b/package.json
@@ -7,15 +7,13 @@
     "server": "nodemon ./server/server.js",
     "seed": "node ./server/seed.js",
     "start": "node ./server/server.js",
-    "build": "prisma generate",
-    "test" : "jest --runInBand"
+    "build": "prisma generate"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
-    "jest": "^30.1.3",
     "prisma": "^6.16.2",
     "puppeteer": "^24.22.0",
     "supertest": "^7.1.4"
